End of Flexbox investigations. Flexbox issues:  - Android 4 stock browser: non visible flexbox items are taken into account in the layout  - Too many code to manage 2009 and last specs  - ...

--- a/css/ViewStack.less
+++ b/css/ViewStack.less
@@ -4,21 +4,21 @@
 }
 
 .mblViewStackFlexBox {
-  display: -webkit-flex;
+  .flexbox();
   height: 100%;
   width: 100%;
   margin-left:0%;
-  .animateMarginLeft();
 }
 
-.mblViewStack:before{
-  content: "";
-  position: absolute;
-  border: solid 1px black;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-}
+//.mblViewStack:before{
+//  content: "";
+//  position: absolute;
+//  border: solid 1px black;
+//  width: 100%;
+//  height: 100%;
+//  box-sizing: border-box;
+//
+//}
 
 .mblViewStackFlexBox div{
   font-weight: bold;
@@ -29,9 +29,57 @@
 
 @ANIMATION_DURATION: 0.4s;
 @ANIMATION_STYLE:  ease-in-out;
-.animateMarginLeft{
+
+.mblSlideAnim {
+  .slideAnimation();
+}
+
+.order-1 {
+  .order(-1);
+}
+.order0 {
+  .order(0);
+}
+.order1 {
+  .order(1);
+}
+.order2 {
+  .order(2);
+}
+.order3 {
+  .order(3);
+}
+.order4 {
+  .order(4);
+}
+
+.slideAnimation{
   -moz-transition: margin-left @ANIMATION_DURATION @ANIMATION_STYLE;
   -webkit-transition: margin-left @ANIMATION_DURATION @ANIMATION_STYLE;
   -ms-transition: margin-left @ANIMATION_DURATION @ANIMATION_STYLE;
   transition: margin-left @ANIMATION_DURATION @ANIMATION_STYLE;
+}
+
+.flexbox() {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
+
+.flex(@values) {
+  -webkit-box-flex: @values;
+  -moz-box-flex:  @values;
+  -webkit-flex:  @values;
+  -ms-flex:  @values;
+  flex:  @values;
+}
+
+.order(@val) {
+  -webkit-box-ordinal-group: @val;
+  -moz-box-ordinal-group: @val;
+  -ms-flex-order: @val;
+  -webkit-order: @val;
+  order: @val;
 }
